# StringGen

./: .gitignore  CMakeLists.txt  README.md
StringGen/: CMakeLists.txt
StringGen/include/: utils.h
StringGen/src/: main.cpp
StringGenLib/: CMakeLists.txt
StringGenLib/include/: inc.h  stringgenlib.h
StringGenLib/src/: lib.cpp
StringGenTest/: CMakeLists.txt
StringGenTest/src/: StringGenTest.cpp
